--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@
     background-color: white;
     height: 100px;
     width: 250px;
-    border-radius: 20px ;
+    border-radius: 20px;
     font-size: 20px;
     display: flex;
     justify-content: center;
@@ -25,6 +25,10 @@ h1{
 h3{
     color: white;
     text-align: center;
+}
+.bill{
+    font-size: 25px;
+    /* text-align: center; */
 }
 
 /* //scroller swiper ,js */
@@ -452,7 +456,7 @@ padding-left: 5px;
     }
     main .hero-section img{
         width: 100%;
-        height: 180px;
+        height: 130px;
      }
      .img-1{
         width: 60%;
